--- a/views/root.erb
+++ b/views/root.erb
@@ -2,12 +2,12 @@
 
 
 <form method='post' action="records">
-  <input type="text" name = "r[]" value="first">
-  <input type='text' name = 'r[]' value="last">
-  <input type='text' name = 'r[]' value="street">
-  <input type='text' name = 'r[]' value='city'>
-  <input type='text' name = 'r[]' value="state">
-  <input type='text' name = 'r[]' value='zip'>
-  <input type='text' name = 'r[]' value='phone'>
+  <input type="text" name = "r[]" placeholder="First">
+  <input type='text' name = 'r[]' placeholder="Last">
+  <input type='text' name = 'r[]' placeholder="Street" >
+  <input type='text' name = 'r[]' placeholder="City">
+  <input type='text' name = 'r[]' placeholder="State">
+  <input type='text' name = 'r[]' placeholder="Zip">
+  <input type='text' name = 'r[]' placeholder="Phone">
   <input type='submit'>
 </form>
