Working on Update,delete,cancel

--- a/views/root.erb
+++ b/views/root.erb
@@ -2,12 +2,13 @@
 
 
 <form method='post' action="records">
-  <input type="text" name = "r[]" placeholder="First">
-  <input type='text' name = 'r[]' placeholder="Last">
-  <input type='text' name = 'r[]' placeholder="Street" >
-  <input type='text' name = 'r[]' placeholder="City">
-  <input type='text' name = 'r[]' placeholder="State">
-  <input type='text' name = 'r[]' placeholder="Zip">
-  <input type='text' name = 'r[]' placeholder="Phone">
+  <!-- <input type="text" name = "data[]" placeholder="Id"> -->
+  <input type="text" name = "data[]" placeholder="First">
+  <input type='text' name = 'data[]' placeholder="Last">
+  <input type='text' name = 'data[]' placeholder="Street" >
+  <input type='text' name = 'data[]' placeholder="City">
+  <input type='text' name = 'data[]' placeholder="State">
+  <input type='text' name = 'data[]' placeholder="Zip">
+  <input type='text' name = 'data[]' placeholder="Phone">
   <input type='submit'>
 </form>
