--- a/views/root.erb
+++ b/views/root.erb
@@ -1,8 +1,8 @@
-
+<%=umsg%>
+<%=dmsg%>
 
 
 <form method='post' action="records">
-  <!-- <input type="text" name = "data[]" placeholder="Id"> -->
   <input type="text" name = "data[]" placeholder="First">
   <input type='text' name = 'data[]' placeholder="Last">
   <input type='text' name = 'data[]' placeholder="Street" >
