No DB connections

--- a/views/login.erb
+++ b/views/login.erb
@@ -2,9 +2,11 @@
 <html>
 <head></head>
 
+
+
 <form method = "post" action = "p_login">
-	<input type = "text" name = "un" required>
-	<input type = "password" name = "pw" required>
+	<input type = "text" name = "un" placeholder="username" required>
+	<input type = "password" name = "pw" placeholder="password" required>
 	<input type = "submit" value = "Submit">
 </form>
 
