Fixed builin user column error

--- a/views/login.erb
+++ b/views/login.erb
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 
-
+<%=msg%>
 
 <form method = "post" action = "p_login">
 	<input type = "text" name = "un" placeholder="username" required>
